--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,22 +33,21 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_neumorphic_plus: ^3.3.0
+  # cupertino_icons: ^1.0.8
   blur: ^3.1.0
-  glassmorphism: ^2.0.0
-  lottie: ^2.7.0
-  permission_handler: ^11.3.1
+  # glassmorphism: ^2.0.0
+  # lottie: ^2.7.0
+  # permission_handler: ^11.3.1
   just_audio: ^0.9.36
-  audio_session: ^0.1.16
-  audio_service: ^0.18.10
+  # audio_session: ^0.1.16
+  # audio_service: ^0.18.10
   flutter_riverpod: ^2.5.1
   dart_ytmusic_api: ^1.2.1
   youtube_explode_dart: ^2.5.1
   shimmer: ^3.0.0
-  go_router: ^16.0.0
+  # go_router: ^16.0.0
   http: ^1.4.0
-  shared_preferences: ^2.5.3
+  # shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +71,6 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/music_files/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
